EXTRA_DIST = \
	cogl-fixes.vapi \
	compat.vapi \
	config.vapi \
	libbamf3.deps \
	libbamf3.vapi \
	gdesktopenums-3.0.vapi \
	gnome-desktop-3.0.deps \
	gnome-desktop-3.0.vapi \
	libmutter.deps \
	libmutter.vapi \
	libmutter-0.deps \
	libmutter-0.vapi \
	mutter-clutter-0.deps \
	mutter-clutter-0.vapi \
	mutter-clutter-1.0.deps \
	mutter-clutter-1.0.vapi \
	mutter-cogl-0.deps \
	mutter-cogl-0.vapi \
	mutter-cogl-1.0.deps \
	mutter-cogl-1.0.vapi \
	xfixes-4.0.vapi \
	$(NULL)

